add first custom action 123

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
       #chama a action local via path 
       - name: Load & cache dependencies
         uses: ./.github/actions/cached-deps
+        #teste
 
       - name: Lint code
         run: npm run lint
