--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -8,6 +8,12 @@ inputs:
     description: 'escolha se vai realizar o cache ou não'
     required: false
     default: 'true'
+
+#outputs para informações de fluxo
+outputs:
+  used-cache:
+    description: 'cache was used'
+    value: ${{ steps.install-.outputs.cache }}
 runs:
   using: 'composite'
   steps:
@@ -22,7 +28,13 @@ runs:
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
 
     - name: Install dependencies
+
+      #id utilizado para verificar se dependencias foram usadas
+      id: install-dependencies
+
       #contexto de input para recuperar os inputs declarados nessa action
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
-      run: npm ci
+      run: | 
+        npm ci
+        echo "cache='${{ inputs.caching }}" >> GITHUB_OUTPUT
       shell: bash #shell usado na action
