--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -13,7 +13,7 @@ inputs:
 outputs:
   used-cache:
     description: 'cache was used'
-    value: ${{ steps.install-.outputs.cache }}
+    value: ${{ steps.install.outputs.cache }}
 runs:
   using: 'composite'
   steps:
